google integration done

--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,9 @@
   <meta name="apple-mobile-web-app-title" content="brainbash_frontend">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <!-- Google Sign-In client ID (required for google_sign_in on web) -->
+  <meta name="google-signin-client_id" content="299124149695-l9j2u20pfjekin89rg24olrob8kia2cr.apps.googleusercontent.com">
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
