--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="brainbash_frontend">
+  <meta name="apple-mobile-web-app-title" content="BrainBash">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Google Sign-In client ID (required for google_sign_in on web) -->
@@ -32,7 +32,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>brainbash_frontend</title>
+  <title>BrainBash</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
