safari changes done

--- a/web/index.html
+++ b/web/index.html
@@ -18,16 +18,21 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Train your brain, track your progress">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="BrainBash">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Google Sign-In client ID (required for google_sign_in on web) -->
   <meta name="google-signin-client_id" content="299124149695-l9j2u20pfjekin89rg24olrob8kia2cr.apps.googleusercontent.com">
+  
+  <!-- Security headers for iOS Safari -->
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
